--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>ratelimit</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>RateLimiter-spring-boot-starter</name>
-    <description>分布式锁，限流组件</description>
+    <description>限流组件</description>
 
     <properties>
         <java.version>1.8</java.version>
